--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lodash": "^4.17.4",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
+    "react-particles-js": "^1.5.0",
+    "react-router-dom": "next",
     "recharts": "^0.22.0",
     "styled-components": "^1.4.4"
   },
